--- a/Projects/SpringBoot/githubAnalytics/index.html
+++ b/Projects/SpringBoot/githubAnalytics/index.html
@@ -690,7 +690,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>    </div>
+                    </div>   
+				</div>main outer
                 <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
              </div>
     </div>
